arabic variants right alignment issue fix

--- a/blocks/destination/destination.css
+++ b/blocks/destination/destination.css
@@ -12,3 +12,6 @@
     font-weight: bolder;
 }
 
+[id^="destination-"].arabic-variants {
+    text-align: right;
+}
